ACLOCAL_AMFLAGS = -I m4
SUBDIRS = lib/src frontend
dist_doc_DATA = README.md
EXTRA_DIST = module/cmd_handler.c
EXTRA_DIST += module/entrypoint.c
EXTRA_DIST += module/Makefile
EXTRA_DIST += module/kernel_return.S
EXTRA_DIST += module/device_tree.h
EXTRA_DIST += module/device_tree.c
EXTRA_DIST += module/undef_hook.c
EXTRA_DIST += module/undef_hook.h
EXTRA_DIST += module/gic.c
EXTRA_DIST += frontend/console.py
EXTRA_DIST += common/Kbuild
EXTRA_DIST += LICENSE
EXTRA_DIST += DISCLAIMER
