AC_INIT([Maplesyrup], [1.0], [maple@syrup])
AC_CONFIG_AUX_DIR([build-aux])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AM_PROG_AR
AM_SILENT_RULES([yes])
AC_PROG_CC
LT_INIT
AC_CONFIG_MACRO_DIR([m4])
#AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
 Makefile
 lib/src/Makefile
 frontend/Makefile
])
AC_OUTPUT
