lib_LTLIBRARIES = libmaplesyrup.la
libmaplesyrup_la_SOURCES = open_device.c maplesyrup.c  cmd_handler.c support.c parse_breakout.c raw_results.c open_device.h raw_results.h parse_breakout.h
libmaplesyrup_la_SOURCES += bitfields/bitfield_armv7a.c
libmaplesyrup_la_SOURCES += bitfields/bitfield_armv8a.c
libmaplesyrup_la_SOURCES += bitfields/bitfield_cortex-a57.c
libmaplesyrup_la_SOURCES += bitfields/bitfield_cortex-a53.c
libmaplesyrup_la_SOURCES += bitfields/bitfield_cortex-a15.c
libmaplesyrup_la_SOURCES += bitfields/bitfield_cortex-a7.c
libmaplesyrup_la_SOURCES += bitfields/bitfield_gicv2.c 
libmaplesyrup_la_SOURCES += bitfields/bitfield_armv7a.h
libmaplesyrup_la_SOURCES += bitfields/bitfield_armv8a.h
libmaplesyrup_la_SOURCES += bitfields/bitfield_cortex-a7.h
libmaplesyrup_la_SOURCES += bitfields/bitfield_cortex-a15.h 
libmaplesyrup_la_SOURCES += bitfields/bitfield_cortex-a53.h 
libmaplesyrup_la_SOURCES += bitfields/bitfield_cortex-a57.h 
libmaplesyrup_la_SOURCES += bitfields/bitfield_gicv2.h
libmaplesyrup_la_SOURCES += ../include/maplesyrup.h
libmaplesyrup_la_SOURCES += ../../common/support.h
libmaplesyrup_la_SOURCES += ../../common/ms_error.h
libmaplesyrup_la_SOURCES += ../../common/parse.h
libmaplesyrup_la_SOURCES += ../../common/psr.h
libmaplesyrup_la_SOURCES += ../../common/cmd_handler.h
libmaplesyrup_la_SOURCES += ../../common/ms_debug.c
libmaplesyrup_la_SOURCES += ../../common/ms_debug.h
libmaplesyrup_la_SOURCES += ../../common/jumptable.c
libmaplesyrup_la_SOURCES += ../../common/cp15.h
libmaplesyrup_la_SOURCES += ../../common/psr.h
libmaplesyrup_la_SOURCES += ../../common/vfpu.h
libmaplesyrup_la_SOURCES += ../../common/addrtrans.c
libmaplesyrup_la_SOURCES += ../../common/debug.c
libmaplesyrup_la_SOURCES += ../../common/fault.c
libmaplesyrup_la_SOURCES += ../../common/fp.c
libmaplesyrup_la_SOURCES += ../../common/timer.c
libmaplesyrup_la_SOURCES += ../../common/ident.c
libmaplesyrup_la_SOURCES += ../../common/impl_def.c
libmaplesyrup_la_SOURCES += ../../common/jazelle.c
libmaplesyrup_la_SOURCES += ../../common/misc.c
libmaplesyrup_la_SOURCES += ../../common/other.c
libmaplesyrup_la_SOURCES += ../../common/perfmon.c
libmaplesyrup_la_SOURCES += ../../common/secext.c
libmaplesyrup_la_SOURCES += ../../common/thumb.c
libmaplesyrup_la_SOURCES += ../../common/virtmem.c
libmaplesyrup_la_SOURCES += ../../common/psr.c
libmaplesyrup_la_SOURCES += ../../common/aarch64.c
libmaplesyrup_la_SOURCES += ../../common/aarch64.h
libmaplesyrup_la_SOURCES += ../../common/intc.h

libmaplesyrup_la_CFLAGS = -I../include/ -I../../common/
AUTOMAKE_OPTIONS = subdir-objects
